{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 397,
  "lineage": "5c273fd9-61b7-a615-f0b7-e313766af030",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05561ceba311a6c7b",
            "arn": "arn:aws:ec2:ap-south-1:273505519511:instance/i-0850253d1d3214e55",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0850253d1d3214e55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mentalhealth-ecs-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0786067e49f01a252",
            "private_dns": "ip-10-0-1-176.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-13-233-112-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.112.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a544dcbdd7b7358",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0772b99ee471d041a",
            "tags": {
              "Name": "mentalhealth-ecs-bastion"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0557b896bedc1c18f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:internet-gateway/igw-070a4ab39e676649e",
            "id": "igw-070a4ab39e676649e",
            "owner_id": "273505519511",
            "tags": {
              "Name": "mentalhealth-ecs-igw"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-igw"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493",
            "arn_suffix": "app/mentalhealth-ecs-alb/ea81e3c638510493",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mentalhealth-ecs-alb-980958532.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mentalhealth-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f68b122fd87cbd8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e050907223f1119"
              },
              {
                "subnet_id": "subnet-0772b99ee471d041a"
              }
            ],
            "subnets": [
              "subnet-03e050907223f1119",
              "subnet-0772b99ee471d041a"
            ],
            "tags": {
              "Name": "mentalhealth-ecs-alb"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-alb"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/0d7bf0ff1e7ea352",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/0d7bf0ff1e7ea352",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630",
            "certificate_arn": "arn:aws:acm:ap-south-1:273505519511:certificate/cec44828-afc9-413f-8736-d212879caf27",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-frontend-tg/2de54ea0463b8810",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_lb.app",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-tg/53f0e87768f64f35",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener-rule/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630/f51d13a39758e2f8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener-rule/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630/f51d13a39758e2f8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_lb.app",
            "aws_lb_listener.https",
            "aws_lb_target_group.app",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_root_to_www_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "www.anxietyaicure.com",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener-rule/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630/c3a6791800950334",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "anxietyaicure.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener-rule/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630/c3a6791800950334",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:listener/app/mentalhealth-ecs-alb/ea81e3c638510493/2be65a03d2963630",
            "priority": 50,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_lb.app",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-tg/53f0e87768f64f35",
            "arn_suffix": "targetgroup/mentalhealth-ecs-tg/53f0e87768f64f35",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-tg/53f0e87768f64f35",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mentalhealth-ecs-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mentalhealth-ecs-tg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-frontend-tg/2de54ea0463b8810",
            "arn_suffix": "targetgroup/mentalhealth-ecs-frontend-tg/2de54ea0463b8810",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:273505519511:targetgroup/mentalhealth-ecs-frontend-tg/2de54ea0463b8810",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:273505519511:loadbalancer/app/mentalhealth-ecs-alb/ea81e3c638510493"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mentalhealth-ecs-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mentalhealth-ecs-frontend-tg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:route-table/rtb-031b22a57da95fe3f",
            "id": "rtb-031b22a57da95fe3f",
            "owner_id": "273505519511",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mentalhealth-ecs-private-rt"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:route-table/rtb-074083426e3c54f67",
            "id": "rtb-074083426e3c54f67",
            "owner_id": "273505519511",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070a4ab39e676649e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mentalhealth-ecs-public-rt"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6cf74bb8b946bc8",
            "route_table_id": "rtb-031b22a57da95fe3f",
            "subnet_id": "subnet-0ce6a0384a3b0d39b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e434e1e8c0dd8d8",
            "route_table_id": "rtb-031b22a57da95fe3f",
            "subnet_id": "subnet-0d1e485205d621922"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7e0902759ab365f",
            "route_table_id": "rtb-074083426e3c54f67",
            "subnet_id": "subnet-0772b99ee471d041a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54b582457cde6e8",
            "route_table_id": "rtb-074083426e3c54f67",
            "subnet_id": "subnet-03e050907223f1119"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-09f68b122fd87cbd8",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f68b122fd87cbd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mentalhealth-ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentalhealth-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-0557b896bedc1c18f",
            "description": "Allow SSH access to Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0557b896bedc1c18f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mentalhealth-ecs-bastion-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentalhealth-ecs-bastion-sg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-08d7ddaaccb0148e0",
            "description": "Allow access to RDS from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d7ddaaccb0148e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0557b896bedc1c18f",
                  "sg-06715553f16582231"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mentalhealth-ecs-rds-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentalhealth-ecs-rds-sg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.service_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-06715553f16582231",
            "description": "ECS service SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06715553f16582231",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB to Frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f68b122fd87cbd8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f68b122fd87cbd8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mentalhealth-ecs-svc-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentalhealth-ecs-svc-sg"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-svc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-0ce6a0384a3b0d39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce6a0384a3b0d39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentalhealth-ecs-private-az1"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-private-az1"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-0d1e485205d621922",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e485205d621922",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentalhealth-ecs-private-az2"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-private-az2"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-0772b99ee471d041a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0772b99ee471d041a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentalhealth-ecs-public-az1"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-public-az1"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-03e050907223f1119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e050907223f1119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentalhealth-ecs-public-az2"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-public-az2"
            },
            "vpc_id": "vpc-0c31c55dafe48a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc/vpc-0c31c55dafe48a3b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ff82284338cc66c",
            "default_route_table_id": "rtb-07b011335cff6e740",
            "default_security_group_id": "sg-09099a9ec7f520577",
            "dhcp_options_id": "dopt-0976e74362cde68ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c31c55dafe48a3b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b011335cff6e740",
            "owner_id": "273505519511",
            "tags": {
              "Name": "mentalhealth-ecs-vpc"
            },
            "tags_all": {
              "Name": "mentalhealth-ecs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}